--- a/source-layer.html
+++ b/source-layer.html
@@ -2,13 +2,30 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>教会と駅 : インフォグラフィックス : クリスチャントゥデイ</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
+    <meta name="twitter:site"      content="chtodayjp" />
+    <meta property="fb:app_id"     content="1625923791071391" />
+    <meta property="og:title" content="開拓伝道の要所が明らかに「１日１０００人以上乗降者がいるのに徒歩圏に教会がない全国の駅」: クリスチャントゥデイ">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name"  content="クリスチャントゥデイ" />
+    <meta rel="canonical" href="https://www.christiantoday.co.jp/views/infographics/churches-and-stations.htm" />
+
+    <meta property="og:title" content="開拓伝道の要所が明らかに「１日１０００人以上乗降者がいるのに徒歩圏に教会がない全国の駅」" />
+    <meta property="twitter:title" content="開拓伝道の要所が明らかに「１日１０００人以上乗降者がいるのに徒歩圏に教会がない全国の駅」" />
+    
+    
+    <meta property="syndication-source" content="https://www.christiantoday.co.jp/views/infographics/churches-and-stations.htm" />
+    <meta name="robots" content="index, follow" /><meta name="Googlebot-news" content="index, follow" />
+        <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:url" content="https://www.christiantoday.co.jp/views/infographics/churches-and-stations.htm" />
+    <meta property="og:image"  content="https://www.christiantoday.co.jp/" />
+    <meta name="twitter:image" content="https://www.christiantoday.co.jp/" />
+
+
+    <meta property="og:url" content="https://www.christiantoday.co.jp/views/infographics/churches-and-stations.htm">
     <meta property="og:image" content="">
     <link rel="apple-touch-icon" href="icon.png">
 
