Remove unused files, fix url

--- a/index.html
+++ b/index.html
@@ -11,25 +11,24 @@
     <meta property="og:title" content="開拓伝道の要所が明らかに「１日１０００人以上乗降者がいるのに徒歩圏に教会がない全国の駅」: クリスチャントゥデイ">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="クリスチャントゥデイ"/>
-    <meta rel="canonical" href="https://www.christiantoday.co.jp/views/infographics/churches-and-stations.htm"/>
+    <meta rel="canonical" href="https://www.christiantoday.co.jp/infographics/church-stations"/>
 
     <meta property="og:title" content="開拓伝道の要所が明らかに「１日１０００人以上乗降者がいるのに徒歩圏に教会がない全国の駅」"/>
     <meta property="twitter:title" content="開拓伝道の要所が明らかに「１日１０００人以上乗降者がいるのに徒歩圏に教会がない全国の駅」"/>
 
 
     <meta property="syndication-source"
-          content="https://www.christiantoday.co.jp/views/infographics/churches-and-stations.htm"/>
+          content="https://www.christiantoday.co.jp/infographics/church-stations"/>
     <meta name="robots" content="index, follow"/>
     <meta name="Googlebot-news" content="index, follow"/>
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta property="og:url" content="https://www.christiantoday.co.jp/views/infographics/churches-and-stations.htm"/>
+    <meta property="og:url" content="https://www.christiantoday.co.jp/infographics/church-stations"/>
     <meta property="og:image" content="https://www.christiantoday.co.jp/"/>
     <meta name="twitter:image" content="https://www.christiantoday.co.jp/"/>
 
 
-    <meta property="og:url" content="https://www.christiantoday.co.jp/views/infographics/churches-and-stations.htm">
+    <meta property="og:url" content="https://www.christiantoday.co.jp/infographics/church-stations">
     <meta property="og:image" content="">
-    <link rel="apple-touch-icon" href="icon.png">
 
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js"></script>
