Optimize google tag script

--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
 
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-2400048-12"></script>
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-2400048-12', 'auto');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-2400048-12');
     </script>
 
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js"></script>
@@ -452,10 +454,6 @@
         switchLanguage(targetLanguage);
     });
 
-</script>
-
-<script>
-    ga('send', 'pageview');
 </script>
 
 </body>
