--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             top: 0;
             bottom: 0;
             width: 100%;
+            z-index: 1;
         }
 
         #menu {
@@ -80,6 +81,7 @@
             opacity: 0.6;
             font-family: 'Open Sans', sans-serif;
             font-size: 13px;
+            z-index: 2;
         }
 
         ul {
