Fix social card info

--- a/index.html
+++ b/index.html
@@ -3,32 +3,26 @@
 <head>
     <meta charset="utf-8">
     <title>教会と駅 : インフォグラフィックス : クリスチャントゥデイ</title>
-    <meta name="description" content="">
+    <meta name="description" content="「教会と駅」は、全国の教会が近くにない駅を可視化し、開拓宣教の候補地を考える際の参考情報を提供するために考案されたインターネット上の地図です。">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <meta name="twitter:site" content="chtodayjp"/>
     <meta property="fb:app_id" content="1625923791071391"/>
-    <meta property="og:title" content="開拓伝道の要所が明らかに「１日１０００人以上乗降者がいるのに徒歩圏に教会がない全国の駅」: クリスチャントゥデイ">
+    <meta rel="canonical" href="https://www.christiantoday.co.jp/infographics/church-station/"/>
+
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="クリスチャントゥデイ"/>
-    <meta rel="canonical" href="https://www.christiantoday.co.jp/infographics/church-stations"/>
+    <meta property="og:title" content="教会と駅ークリスチャントゥデイ開発の開拓宣教支援ツール"/>
+    <meta property="og:url" content="https://www.christiantoday.co.jp/infographics/church-station/"/>
+    <meta property="og:image" content="https://www.christiantoday.co.jp/data/images/full/32827/image.jpg"/>
 
-    <meta property="og:title" content="開拓伝道の要所が明らかに「１日１０００人以上乗降者がいるのに徒歩圏に教会がない全国の駅」"/>
-    <meta property="twitter:title" content="開拓伝道の要所が明らかに「１日１０００人以上乗降者がいるのに徒歩圏に教会がない全国の駅」"/>
-
+    <meta name="twitter:site" content="chtodayjp"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:image" content="https://www.christiantoday.co.jp/data/images/full/32827/image.jpg"/>
+    <meta property="twitter:title" content="教会と駅ークリスチャントゥデイ開発の開拓宣教支援ツール"/>
 
     <meta property="syndication-source"
-          content="https://www.christiantoday.co.jp/infographics/church-stations"/>
+          content="https://www.christiantoday.co.jp/infographics/church-station/"/>
     <meta name="robots" content="index, follow"/>
     <meta name="Googlebot-news" content="index, follow"/>
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta property="og:url" content="https://www.christiantoday.co.jp/infographics/church-stations"/>
-    <meta property="og:image" content="https://www.christiantoday.co.jp/"/>
-    <meta name="twitter:image" content="https://www.christiantoday.co.jp/"/>
-
-
-    <meta property="og:url" content="https://www.christiantoday.co.jp/infographics/church-stations">
-    <meta property="og:image" content="">
 
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
 
