Add search keyword for better SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>教会と駅 : インフォグラフィックス : クリスチャントゥデイ</title>
     <meta name="description" content="「教会と駅」は、全国の教会が近くにない駅を可視化し、開拓宣教の候補地を考える際の参考情報を提供するために考案されたインターネット上の地図です。">
+    <meta name="news_keywords" content="教会,開拓,開拓宣教,日本宣教,宣教学,宣教地図,GIS,駅,乗降者数,データジャーナリズム,キリスト教データジャーナリズム,クリスチャントゥデイ" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="fb:app_id" content="1625923791071391"/>
     <meta rel="canonical" href="https://www.christiantoday.co.jp/infographics/church-station/"/>
